--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,32 @@
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+  width: 700px;
+  margin: auto;
+  padding-top: 5rem;
 }
 
 .App-header {
   background-color: #282c34;
   min-height: 7vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
 }
+.editor {
+  height: 500px;
+  background-color: rgb(243, 239, 239);
+  box-shadow: 0px 4px 8px rgba(58, 58, 68, 0.16),
+    0px 8px 16px rgba(90, 91, 106, 0.16);
 
-.App-link {
-  color: #61dafb;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.btn-group {
+  width: 700px;
+}
+.App-link {
+  color: 'blue';
+  font-style: italic;
+  cursor: pointer;
+}
+.public-DraftEditorPlaceholder-inner {
+  color: gray;
+  font-style: italic;
 }
