add html view component

--- a/src/App.css
+++ b/src/App.css
@@ -12,11 +12,12 @@
   color: white;
 }
 .editor {
-  height: 500px;
+  min-height: 30vh;
   background-color: rgb(243, 239, 239);
   box-shadow: 0px 4px 8px rgba(58, 58, 68, 0.16),
     0px 8px 16px rgba(90, 91, 106, 0.16);
-
+  resize: vertical;
+  overflow: auto;
 }
 .btn-group {
   width: 700px;
@@ -29,4 +30,8 @@
 .public-DraftEditorPlaceholder-inner {
   color: gray;
   font-style: italic;
+}
+.html-view {
+  height: 30vh;
+  background-color: white;
 }
